// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Groups Groups master detail should always render 1`] = `
<WithWidth(WithStyles(withRouter(MasterDetailBase)))
  classes={
    Object {
      "drawerPaper": "drawer makeStyles-masterDetailGamertagDrawerPaper-3",
      "expander": "makeStyles-masterDetailExpander-2",
    }
  }
  detail={[Function]}
  empty={[Function]}
  master={[Function]}
/>
`;

exports[`Groups renders default properly 1`] = `
<div
  className="userBody"
>
  <WithWidth(WithStyles(withRouter(MasterDetailBase)))
    classes={
      Object {
        "drawerPaper": "drawer makeStyles-masterDetailGamertagDrawerPaper-3",
        "expander": "makeStyles-masterDetailExpander-2",
      }
    }
    detail={[Function]}
    empty={[Function]}
    master={[Function]}
  />
</div>
`;
